--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     
 }
 header {
+    width: 100%;
     position: fixed;
     top: 0;
     min-height: 70px;
@@ -20,7 +21,7 @@ header {
 .logo {
     width: 60vw;
 }
-@media (max-width: 600px) {
+@media (max-width: 690px) {
     .logo {
         margin-top: 15px;
         width: 100%;
@@ -29,20 +30,29 @@ header {
 }
 .logo > img {
     width: 100%;
-    height: 100%;
-    max-width: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    height: 90%;
+    max-width: 350px;
     margin-left: 5px;
+    display: flex;
+    
+    
+    text-align: center;
+    
 }
 nav > ul {
-    width: 35vw;
+    width: 30vw;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     list-style-type: none;
+}
+nav > ul > li {
+    padding:25px;
+    border: 0.5px solid black;
+}
+nav > ul > li:hover {
+    background-color: rgb(130, 159, 211);
+    cursor: pointer;
 }
 .row0 {
     height: 500px;
@@ -72,13 +82,29 @@ nav > ul {
     border: 0.5px solid #000;
 
 }
-/*put a media query here to make the row turn into columns under a certain screen size*/
+@media (max-width: 650px) {
+    #features {
+        flex-direction: column;
+    }
+    .reason {
+        max-width: 280px;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 15px;
+    }
+}
 .row3 {
     background-color: rgba(119, 117, 117, 0.4);
     text-align: center;
     margin: 10px;
     padding: 15px;
     border: 0.5px solid #000;
+}
+@media (max-width: 750px) {
+    #video {
+        
+        max-width: 90%;
+    }
 }
 .row4 {
     background-color: rgba(119, 117, 117, 0.4);
@@ -101,7 +127,7 @@ nav > ul {
 }
 .btn {
     margin-top: 10px;
-    width: 30%;
+    width: 60%;
     height: 30px;
     font-size: 1em;
     border: 0.5px black solid;
@@ -110,4 +136,7 @@ nav > ul {
 }
 .btn:hover {
     background-color: rgb(130, 159, 211);
+}
+footer {
+    text-align: center;
 }
